--- a/day_7(javascript)/dom.html
+++ b/day_7(javascript)/dom.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        // var a = window.prompt("Enter the text color")
-        // var b = window.prompt("Enter the background color")
+        var a = window.prompt("Enter the text color")
+        var b = window.prompt("Enter the background color")
 
         window.onload= function(){
             
